--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,12 +5,16 @@
 */
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --body-bg: #000028;
+  --header-bg: url(../images/cover-image-dark.png) center / cover no-repeat;
+  --accent-color: #FF0070;
+  --decor-bg: var(--accent-color);
+  --title-color: #DB00FF;
+  --text-color: #F1B2CE;
+  --heading-color: var(--accent-color);
+  --border-color: #FF0070;
+  --rec-color: #FF0070;
+  --link-shadow: 2px 2px 0 var(--accent-color);
+  --link-hover-shadow: 1px 1px 0 var(--accent-color);
 }
 
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
-}
