--- a/styles/style.css
+++ b/styles/style.css
@@ -5,9 +5,9 @@
   align-items: flex-start;
   position: relative;
   background: var(--header-bg);
-  min-height: 100vh;
+  
   width: 100%;
-  padding: 0 10px 50px;
+  padding: 0 10px 70px;
 }
 
 .header::before {
@@ -133,7 +133,7 @@ main {
 
 .main__content {
   display: grid;
-  gap: 48px;
+  gap: 50px;
 }
 
 .main__main-text {
@@ -143,7 +143,7 @@ main {
   font-family: var(--font-family);
   font-weight: bold;
   font-display: swap;
-  line-height: 1.234;
+  line-height: 1.3;
 
 }
 
@@ -163,6 +163,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 9px;
+  line-height: 1.3;
   width: 355px;
   font-family: var(--font-family);
   color: var(--text-on-accent);
@@ -188,23 +189,26 @@ main {
 .main__content-block-1, .main__content-block-2, .main__content-block-3 {
   display: flex;
   flex-direction: column;
+  gap: 24px;
+}
+
+.main__content-block-3 {
   gap: 20px;
 }
 
 .block-1 {
   display: grid;
-  gap: 24px;
+  gap: 17px;
 }
 
 .block-2 {
   display: grid;
-  gap: 24px;
+  gap: 17px;
 }
 
 .block-3 {
   display: grid;
-  gap: 24px;
-  /* ... */
+  gap: 20px;
 }
   
 
@@ -228,7 +232,8 @@ main {
   justify-content: center;
   position: relative;
   width: 100%;
-  min-height: 100vh;
+  padding-top: 260px;
+  padding-bottom: 250px;
 }
 
 .footer__title-text {
@@ -246,7 +251,7 @@ main {
 .footer::before {
   content: '';
   position: absolute;
-  top: 40px;
+  top: 45px;
   right: 10px;
   width: 25px;
   height: 25px;
@@ -275,6 +280,7 @@ main {
   .header {
     padding-left: 0;
     align-items: flex-end;
+    min-height: 100vh;
   }
 
   .header__title-text {
@@ -408,6 +414,11 @@ main {
     grid-row: 3 / 4;
   }
   
+  .footer {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
   .footer__title-text {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     justify-self: center;
@@ -485,8 +496,12 @@ main {
     width: 314px;
   }
 
+  .main__content-block-1 {
+    gap: 24px;
+  }
+
   .block-3 {
-    margin-top: 15px;
+    margin-top: 23px;
     margin-bottom: 30px;
   }
 
@@ -507,9 +522,10 @@ main {
 
   .footer__title-text {
     margin: 0;
-    margin-top: 130px;
+    margin-top: 380px;
     justify-content: center;
     justify-items: center;
+    margin-bottom: 260px;
   }
 
   .footer::before {
