--- a/styles/style.css
+++ b/styles/style.css
@@ -234,6 +234,7 @@ main {
   width: 100%;
   padding-top: 260px;
   padding-bottom: 250px;
+  min-height: 100vh;
 }
 
 .footer__title-text {
@@ -482,10 +483,6 @@ main {
 
   .main__main-text {
     width: 314px;
-  }
-
-  .main__content-block-1 {
-    gap: 20px;
   }
 
   .block-text {
