--- a/styles/style.css
+++ b/styles/style.css
@@ -234,7 +234,7 @@ main {
   width: 100%;
   padding-top: 260px;
   padding-bottom: 250px;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .footer__title-text {
