--- a/styles/style.css
+++ b/styles/style.css
@@ -4,42 +4,45 @@
   flex-direction: column;
   align-items: flex-start;
   position: relative;
-  background: var(--header-bg);
-  
+  height: minmax(668px, 100vh);
   width: 100%;
   padding: 0 10px 70px;
 }
 
-.header::before {
+.decorated-zone::before,
+.decorated-zone::after {
   content: '';
   position: absolute;
+  width: 25px;
+  height: 25px;
+  border: 1px solid var(--heading-color);
+}
+
+.decorated-zone::before {
+  border-bottom: none;
+  border-left: none;
+}
+
+.decorated-zone::after {
+  border-top: none;
+  border-right: none;
+}
+
+.header.decorated-zone::before {
   top: 10px;
   right: 10px;
-  width: 25px;
-  height: 25px;
-  border-top: 1px solid var(--heading-color);
-  border-right: 1px solid var(--heading-color);
 }
 
-.header::after {
-  content: '';
-  position: absolute;
+.header.decorated-zone::after {
   bottom: 10px;
   left: 10px;
-  width: 25px;
-  height: 25px;
-  border-bottom: 1px solid var(--heading-color);
-  border-left: 1px solid var(--heading-color);
 }
-
 
 .rec {
   position: absolute;
   top: 10px;
   right: 15px;
   font-size: var(--font-size-base);
-  width: 52px;
-  height: 26px;
   color: var(--rec-color);
   font-family: var(--font-family);
 
@@ -113,7 +116,6 @@
 
 .header__accent-text {
   max-width: 355px;
-  min-height: 117px;
   height: fit-content;
   color: var(--text-on-accent);
   font-family: var(--font-family);
@@ -123,12 +125,13 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
-  background-color: var(--body-bg);
+  background: var(--header-bg);;
   background-attachment: fixed;
 }
 
 main {
   padding: 40px 10px 0px 10px;
+  background-color: var(--body-bg)
 }
 
 .main__content {
@@ -178,7 +181,7 @@ main {
 
 .title-decor {
   background-color: var(--accent-color);
-  color: #000028;
+  color: var(--title-text-color);
   font-family: var(--font-family);
   font-weight: bold;
   font-display: swap;
@@ -186,27 +189,27 @@ main {
   line-height: 1.3;
 }
 
-.main__content-block-1, .main__content-block-2, .main__content-block-3 {
+.main__content-problem, .main__content-distractions, .main__content-improvement {
   display: flex;
   flex-direction: column;
   gap: 24px;
 }
 
-.main__content-block-3 {
+.main__content-improvement {
   gap: 20px;
 }
 
-.block-1 {
+.problem {
   display: grid;
   gap: 17px;
 }
 
-.block-2 {
+.distractions {
   display: grid;
   gap: 17px;
 }
 
-.block-3 {
+.improvement {
   display: grid;
   gap: 20px;
 }
@@ -232,10 +235,12 @@ main {
   justify-content: center;
   position: relative;
   width: 100%;
-  padding-top: 260px;
-  padding-bottom: 250px;
+  min-height: 668px;
   height: 100vh;
+  padding: 20px 0;
+  background-color: var(--body-bg)
 }
+
 
 .footer__title-text {
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
@@ -249,26 +254,14 @@ main {
   margin-top: 60px;
 }
 
-.footer::before {
-  content: '';
-  position: absolute;
+.footer.decorated-corner::before {
   top: 45px;
   right: 10px;
-  width: 25px;
-  height: 25px;
-  border-top: 1px solid var(--heading-color);
-  border-right: 1px solid var(--heading-color);
 }
 
-.footer::after {
-  content: '';
-  position: absolute;
+.footer.decorated-corner::after {
   bottom: -20px;
   left: 10px;
-  width: 25px;
-  height: 25px;
-  border-bottom: 1px solid var(--heading-color);
-  border-left: 1px solid var(--heading-color);
 }
 
 .shadowed-text {
@@ -281,7 +274,8 @@ main {
   .header {
     padding-left: 0;
     align-items: flex-end;
-    min-height: 100vh;
+    height: 100vh;
+    min-height: 768px;
   }
 
   .header__title-text {
@@ -300,7 +294,7 @@ main {
     margin-right: 10px;
     margin-bottom: 173px;
   }
-  .header::before {
+  .header.decorated-zone::before {
     top: 20px;
     right: 20px;
   }
@@ -315,8 +309,9 @@ main {
     height: 13px;
   }
 
-  .header::after {
+  .header.decorated-zone::after {
     left: 20px;
+    bottom: 20px;
   }
 
   main {
@@ -325,7 +320,7 @@ main {
     padding-right: 20px;
   }
   
-  .block-1 {
+  .problem {
     display: grid;
     gap: 20px;
     grid-template-columns: 1fr 2fr;
@@ -344,7 +339,7 @@ main {
     width: 475px;
   }
 
-  .main__content-block-1 {
+  .main__content-problem {
     display: grid;
   }
   
@@ -353,7 +348,7 @@ main {
     width: 728px;
   }
 
-  .block-3 {
+  .improvement {
     margin-top: 40px;
     display: grid;
     grid-template-columns: 1fr 2fr;
@@ -427,14 +422,14 @@ main {
     width: 360px;
   }
 
-  .footer::after {
+  .footer.decorated-zone::after {
     left: 20px;
     bottom: 20px;
   }
 
-  .footer::before {
-    top: 80px;
-    right: 22px;
+  .footer.decorated-zone::before {
+    top: 82px;
+    right: 20px;
   }
 }
 
@@ -455,19 +450,15 @@ main {
     height: 26px;
   }
 
-  .header::before {
-    margin-top: 1px;
-  }
 
-  .header::after {
-    margin-bottom: 11px;
+  .header.decorated-zone::after {
+    margin-bottom: 0px;
   }
 
   .header__accent-text {
     margin: 0;
     margin-right: 20px;
     max-width: 491px;
-    min-height: 71px;
   }
 
   .header__title-text {
@@ -493,44 +484,47 @@ main {
     width: 314px;
   }
 
-  .main__content-block-1 {
+  .main__content-problem {
     gap: 24px;
   }
 
-  .block-3 {
+  .improvement {
     margin-top: 23px;
     margin-bottom: 30px;
   }
 
-  .main__content-block-2 {
+  .main__content-distractions {
     margin-bottom: 23px;
     display: grid;
     gap: 20px;
     grid-template-columns: 1fr 1fr 1fr;
   }
 
-  .main__content-block-3 {
+  .main__content-improvement {
     margin-bottom: 10px;
   }
 
   .main__block-photo.gallery {
     max-width: 984px;
+    margin-bottom: 60px;
+  }
+
+  .footer {
+    height: 100vh;
+    min-height: 768px;
   }
 
   .footer__title-text {
     margin: 0;
-    margin-top: 380px;
     justify-content: center;
     justify-items: center;
-    margin-bottom: 260px;
+    
   }
 
-  .footer::before {
-    top: 83px;
+  .footer.decorated-zone::before {
+    top: 23px;
     right: 20px;
   }
 
-  .footer::after {
-    bottom: -44px;
-  }
+  
 }
