--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,6 +6,7 @@
   --theme-button-color: #FF0070;
   --text-on-accent: #F1B2CE;
   --body-bg: #000028;
+  --title-text-color: #000028; 
   --header-bg: url(../images/cover-image-dark.png) center / cover no-repeat;
   --accent-color: #FF0070;
   --decor-bg: var(--accent-color);
