--- a/styles/style.css
+++ b/styles/style.css
@@ -125,7 +125,7 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
-  background: var(--header-bg);;
+  background: var(--header-bg);
   background-attachment: fixed;
 }
 
