--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,8 @@
   border-radius: 50%;
   vertical-align: calc(middle - 1.5px);
   margin-left: 6px;
+  /* тень */
+  box-shadow: 0px 0px 4px 2px rgba(255, 0, 112, 1); 
 }
 
 .header__theme-menu {
@@ -167,7 +169,7 @@ main {
   flex-direction: column;
   gap: 9px;
   line-height: 1.3;
-  width: 355px;
+  /* width: 355px; */
   font-family: var(--font-family);
   color: var(--text-on-accent);
   font-weight: normal;
@@ -192,7 +194,7 @@ main {
 .main__content-problem, .main__content-distractions, .main__content-improvement {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 23px;
 }
 
 .main__content-improvement {
@@ -225,7 +227,7 @@ main {
 }
 
 .gallery__image {
-  width: 355px;
+  width: 100%;
 }
 
 .footer {
@@ -251,15 +253,14 @@ main {
   font-family: var(--font-family);
   font-weight: bold;
   font-display: swap;
-  margin-top: 60px;
 }
 
-.footer.decorated-corner::before {
+.footer.decorated-zone::before {
   top: 45px;
   right: 10px;
 }
 
-.footer.decorated-corner::after {
+.footer.decorated-zone::after {
   bottom: -20px;
   left: 10px;
 }
@@ -318,6 +319,7 @@ main {
     padding-top: 60px;
     padding-left: 20px;
     padding-right: 20px;
+    margin-bottom: 60px;
   }
   
   .problem {
@@ -336,7 +338,7 @@ main {
   }
 
   .block-text {
-    width: 475px;
+    /* width: 475px; */
   }
 
   .main__content-problem {
@@ -345,7 +347,7 @@ main {
   
 
   .block-text-2 {
-    width: 728px;
+    /*width: 728px;*/
   }
 
   .improvement {
@@ -356,7 +358,7 @@ main {
   }
   
   .main__block-photo.gallery {
-    max-width: 728px;
+   /* max-width: 728px;*/
     margin: 0 auto;
   }
 
@@ -370,7 +372,7 @@ main {
   
   .main__block-photo .photo {
     grid-column: 1 / -1;
-    margin-bottom: 10px;
+    margin-bottom: 16px;
   }
   
   .gallery__item {
@@ -418,7 +420,6 @@ main {
   .footer__title-text {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     justify-self: center;
-    margin: 524px 0 463px 0;
     width: 360px;
   }
 
@@ -428,7 +429,7 @@ main {
   }
 
   .footer.decorated-zone::before {
-    top: 82px;
+    top: 20px;
     right: 20px;
   }
 }
@@ -450,6 +451,13 @@ main {
     height: 26px;
   }
 
+  .problem {
+    gap: 10px;
+  }
+  
+  .main__content {
+    gap: 41px;
+  }
 
   .header.decorated-zone::after {
     margin-bottom: 0px;
@@ -470,6 +478,7 @@ main {
     gap: 35px;
     padding-left: 20px;
     padding-right: 20px;
+    margin: 0;
   }
 
   .main__main-text {
@@ -477,24 +486,25 @@ main {
   }
 
   .block-text {
-    width: 650px;
+    /* width: 650px; */
   }
 
   .block-text-2 {
-    width: 314px;
+    /*width: 314px;*/
   }
 
   .main__content-problem {
-    gap: 24px;
+    gap: 23px;
   }
 
   .improvement {
     margin-top: 23px;
     margin-bottom: 30px;
+    gap: 10px;
   }
 
   .main__content-distractions {
-    margin-bottom: 23px;
+    margin-bottom: 20px;
     display: grid;
     gap: 20px;
     grid-template-columns: 1fr 1fr 1fr;
@@ -505,7 +515,7 @@ main {
   }
 
   .main__block-photo.gallery {
-    max-width: 984px;
+   /* max-width: 984px;*/
     margin-bottom: 60px;
   }
 
@@ -522,7 +532,7 @@ main {
   }
 
   .footer.decorated-zone::before {
-    top: 23px;
+    top: 18px;
     right: 20px;
   }
 
