--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
 
 .decorated-zone::before,
 .decorated-zone::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 25px;
   height: 25px;
@@ -21,19 +21,13 @@
 .decorated-zone::before {
   border-bottom: none;
   border-left: none;
+  top: 10px;
+  right: 10px;
 }
 
 .decorated-zone::after {
   border-top: none;
   border-right: none;
-}
-
-.header.decorated-zone::before {
-  top: 10px;
-  right: 10px;
-}
-
-.header.decorated-zone::after {
   bottom: 10px;
   left: 10px;
 }
@@ -41,22 +35,22 @@
 .rec {
   position: absolute;
   top: 10px;
-  right: 15px;
+  right: 20px;
   font-size: var(--font-size-base);
   color: var(--rec-color);
   font-family: var(--font-family);
-
+  display: none;
 }
 
 .rec::after {
-  content: '';
+  content: "";
   display: inline-block;
   width: 9px;
   height: 9px;
   background-color: #ff0070;
   border-radius: 50%;
   vertical-align: calc(middle - 1.5px);
-  margin-left: 6px;
+  margin-left: 10px;
   box-shadow: 0px 0px 4px 2px rgba(255, 0, 112, 1);
 }
 
@@ -101,6 +95,7 @@
 }
 
 .header__theme-menu-button:focus {
+  outline: none;
   border-bottom: var(--button-visual);
 }
 
@@ -127,17 +122,20 @@
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
   background: var(--header-bg);
+  background-size: cover;
+  background-position: center;
   background-attachment: fixed;
 }
 
 main {
   padding: 40px 10px 0px 10px;
-  background-color: var(--body-bg)
 }
 
 .main__content {
   display: grid;
   gap: 50px;
+  padding-bottom: 35px;
+  background-color: var(--body-bg);
 }
 
 .main__main-text {
@@ -148,7 +146,6 @@ main {
   font-weight: bold;
   font-display: swap;
   line-height: 1.3;
-
 }
 
 .text-link {
@@ -168,7 +165,6 @@ main {
   flex-direction: column;
   gap: 9px;
   line-height: 1.3;
-  /* width: 355px; */
   font-family: var(--font-family);
   color: var(--text-on-accent);
   font-weight: normal;
@@ -190,7 +186,7 @@ main {
   line-height: 1.3;
 }
 
-.main__content-problem, .main__content-distractions, .main__content-improvement {
+.all-content-blocks {
   display: flex;
   flex-direction: column;
   gap: 23px;
@@ -214,7 +210,6 @@ main {
   display: grid;
   gap: 20px;
 }
-  
 
 .main__block-photo {
   display: grid;
@@ -239,9 +234,8 @@ main {
   min-height: 668px;
   height: 100vh;
   padding: 20px 0;
-  background-color: var(--body-bg)
+  background-color: var(--body-bg);
 }
-
 
 .footer__title-text {
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
@@ -252,25 +246,13 @@ main {
   font-family: var(--font-family);
   font-weight: bold;
   font-display: swap;
-}
-
-.footer.decorated-zone::before {
-  top: 45px;
-  right: 10px;
-}
-
-.footer.decorated-zone::after {
-  bottom: -20px;
-  left: 10px;
-}
+  }
 
 .shadowed-text {
   text-shadow: var(--link-shadow);
 }
 
-
 @media (min-width: 768px) {
-  
   .header {
     padding-left: 0;
     align-items: flex-end;
@@ -294,7 +276,7 @@ main {
     margin-right: 10px;
     margin-bottom: 173px;
   }
-  .header.decorated-zone::before {
+  .decorated-zone::before {
     top: 20px;
     right: 20px;
   }
@@ -309,7 +291,7 @@ main {
     height: 13px;
   }
 
-  .header.decorated-zone::after {
+  .decorated-zone::after {
     left: 20px;
     bottom: 20px;
   }
@@ -320,7 +302,7 @@ main {
     padding-right: 20px;
     margin-bottom: 60px;
   }
-  
+
   .problem {
     display: grid;
     gap: 20px;
@@ -330,23 +312,17 @@ main {
 
   .main__content {
     gap: 40px;
+    margin-bottom: 0;
+    padding-bottom: 60px;
   }
-  
+
   .main__main-text {
     width: 234px;
   }
 
-  .block-text {
-    /* width: 475px; */
-  }
 
   .main__content-problem {
     display: grid;
-  }
-  
-
-  .block-text-2 {
-    /*width: 728px;*/
   }
 
   .improvement {
@@ -355,9 +331,8 @@ main {
     grid-template-columns: 1fr 2fr;
     margin-bottom: 40px;
   }
-  
+
   .main__block-photo.gallery {
-   /* max-width: 728px;*/
     margin: 0 auto;
   }
 
@@ -368,24 +343,24 @@ main {
     gap: 20px;
     grid-auto-flow: dense;
   }
-  
+
   .main__block-photo .photo {
     grid-column: 1 / -1;
     margin-bottom: 16px;
   }
-  
+
   .gallery__item {
     box-sizing: border-box;
     margin: 0;
   }
-  
+
   .gallery__image {
     width: 100%;
     height: 100%;
     object-fit: cover;
     display: block;
   }
-  
+
   .gallery__item:nth-child(1) {
     grid-column: span 2;
     grid-row: span 1;
@@ -395,7 +370,7 @@ main {
     grid-column: 3 / 4;
     grid-row: span 2;
   }
-  
+
   .gallery__item:nth-child(3) {
     grid-column: 1 / 2;
     grid-row: 2 / 4;
@@ -410,7 +385,7 @@ main {
     grid-column: 2 / 4;
     grid-row: 3 / 4;
   }
-  
+
   .footer {
     padding-top: 0px;
     padding-bottom: 0px;
@@ -420,24 +395,16 @@ main {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     justify-self: center;
     width: 360px;
+    margin: 0;
   }
 
-  .footer.decorated-zone::after {
-    left: 20px;
-    bottom: 20px;
-  }
-
-  .footer.decorated-zone::before {
-    top: 20px;
-    right: 20px;
-  }
 }
 
 @media (min-width: 1024px) {
   .header {
     padding: 0;
   }
-  
+
   .header__theme-menu-list {
     display: flex;
     align-items: center;
@@ -453,14 +420,12 @@ main {
   .problem {
     gap: 10px;
   }
-  
+
   .main__content {
     gap: 41px;
+    padding-bottom: 0;
   }
 
-  .header.decorated-zone::after {
-    margin-bottom: 0px;
-  }
 
   .header__accent-text {
     margin: 0;
@@ -482,14 +447,6 @@ main {
 
   .main__main-text {
     width: 314px;
-  }
-
-  .block-text {
-    /* width: 650px; */
-  }
-
-  .block-text-2 {
-    /*width: 314px;*/
   }
 
   .main__content-problem {
@@ -514,11 +471,11 @@ main {
   }
 
   .main__block-photo.gallery {
-   /* max-width: 984px;*/
     margin-bottom: 60px;
   }
 
   .footer {
+    margin-top: -2px;
     height: 100vh;
     min-height: 768px;
   }
@@ -527,13 +484,5 @@ main {
     margin: 0;
     justify-content: center;
     justify-items: center;
-    
   }
-
-  .footer.decorated-zone::before {
-    top: 18px;
-    right: 20px;
-  }
-
-  
 }
