Исправил все недочёты в проекте №3

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -21,5 +21,6 @@
   --font-size-base: 18px;
   --text-link: 1px solid #F1B2CE;
   --button-visual: 1px solid rgb(255, 0, 112, .5);
+  --button-visual-no-transparent: 1px solid rgb(255, 0, 112);
 }
 
