--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,6 @@
   font-size: var(--font-size-base);
   color: var(--rec-color);
   font-family: var(--font-family);
-  display: none;
 }
 
 .rec::after {
@@ -96,7 +95,7 @@
 
 .header__theme-menu-button:focus {
   outline: none;
-  border-bottom: var(--button-visual);
+  border-bottom: var(--button-visual-no-transparent);
 }
 
 .header__title-text {
@@ -135,7 +134,6 @@ main {
   display: grid;
   gap: 50px;
   padding-bottom: 35px;
-  background-color: var(--body-bg);
 }
 
 .main__main-text {
@@ -234,7 +232,6 @@ main {
   min-height: 668px;
   height: 100vh;
   padding: 20px 0;
-  background-color: var(--body-bg);
 }
 
 .footer__title-text {
