--- a/styles/light.css
+++ b/styles/light.css
@@ -20,7 +20,7 @@
   --border-color: #353430;
   --text-link: 1px solid #000;
   --button-visual: 1px solid rgb(0, 0, 0, .3);
-  --button-visual-no-transparent: rgb(0, 0, 0);
+  --button-visual-no-transparent: 1px solid #000;
   --title-text-color: #353430;
   --link-shadow: 2px 2px 0 var(--accent-color);
 }
@@ -42,9 +42,12 @@
   --border-color: #353430;
   --text-link: 1px solid #000;
   --button-visual: 1px solid rgb(0, 0, 0, .3);
-  --button-visual-no-transparent: rgb(0, 0, 0);
+  --button-visual-no-transparent: 1px solid #000;
   --title-text-color: #353430;
   --link-shadow: 2px 2px 0 var(--accent-color);
+  }
+  .rec {
+    display: none;
   }
 }
 .theme-light .rec {
